[gd_scene load_steps=4 format=3 uid="uid://c287o2rpdexd8"]

[ext_resource type="Script" uid="uid://j1b5ql5fgqi2" path="res://main.gd" id="1_ayb3k"]
[ext_resource type="PackedScene" uid="uid://4kdudmjjrlsc" path="res://other shit/fav_server_list.tscn" id="2_kt02t"]
[ext_resource type="Theme" uid="uid://0nsvujc5l0h0" path="res://themes/main.tres" id="2_vfopn"]

[node name="main" type="Node2D"]
script = ExtResource("1_ayb3k")

[node name="host-join" type="Node2D" parent="."]

[node name="Panel" type="Panel" parent="host-join"]
offset_left = 16.0
offset_top = 16.0
offset_right = 1256.0
offset_bottom = 704.0
theme = ExtResource("2_vfopn")

[node name="host2" type="Button" parent="host-join"]
offset_left = 904.0
offset_top = 664.0
offset_right = 1248.0
offset_bottom = 695.0
tooltip_text = "hosts a server without joining it

in order to join the server, you'll need to join on another client"
theme = ExtResource("2_vfopn")
text = "host dedicated server"

[node name="host" type="Button" parent="host-join"]
offset_left = 632.0
offset_top = 408.0
offset_right = 704.0
offset_bottom = 440.0
tooltip_text = "host and join a server"
theme = ExtResource("2_vfopn")
text = "host"

[node name="join2" type="Button" parent="host-join"]
offset_left = 1032.0
offset_top = 624.0
offset_right = 1246.0
offset_bottom = 655.0
tooltip_text = "join a server as a guest"
theme = ExtResource("2_vfopn")
text = "join as guest"

[node name="fav" type="Button" parent="host-join"]
offset_left = 576.0
offset_top = 448.0
offset_right = 960.0
offset_bottom = 479.0
tooltip_text = "add currently inputed IP to favorites"
theme = ExtResource("2_vfopn")
text = "add server to favorites"

[node name="join" type="Button" parent="host-join"]
offset_left = 832.0
offset_top = 408.0
offset_right = 904.0
offset_bottom = 440.0
tooltip_text = "join a server"
theme = ExtResource("2_vfopn")
text = "join"

[node name="LineEdit" type="LineEdit" parent="host-join"]
offset_left = 576.0
offset_top = 312.0
offset_right = 960.0
offset_bottom = 344.0
theme = ExtResource("2_vfopn")
max_length = 20

[node name="Label" type="Label" parent="host-join/LineEdit"]
layout_mode = 0
offset_left = -160.0
offset_right = -5.0
offset_bottom = 32.0
text = "username:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ipEdit" type="LineEdit" parent="host-join"]
offset_left = 576.0
offset_top = 352.0
offset_right = 960.0
offset_bottom = 383.0
theme = ExtResource("2_vfopn")
text = "localhost"
max_length = 20

[node name="Label" type="Label" parent="host-join/ipEdit"]
layout_mode = 0
offset_left = -160.0
offset_right = -5.0
offset_bottom = 32.0
theme = ExtResource("2_vfopn")
text = "server ip:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="portEdit" type="LineEdit" parent="host-join"]
offset_left = 1824.0
offset_top = -416.0
offset_right = 2024.0
offset_bottom = -385.0
theme = ExtResource("2_vfopn")
placeholder_text = "enter server port"
max_length = 20

[node name="errorLabel" type="Label" parent="host-join"]
offset_left = 456.0
offset_top = 280.0
offset_right = 496.0
offset_bottom = 303.0
theme = ExtResource("2_vfopn")

[node name="Label" type="Label" parent="host-join"]
offset_left = 16.0
offset_top = 680.0
offset_right = 64.0
offset_bottom = 703.0
theme = ExtResource("2_vfopn")
text = "1.6.2"

[node name="fav_server_list" parent="host-join" instance=ExtResource("2_kt02t")]
position = Vector2(16, 16)

[node name="censorIP" type="CheckBox" parent="host-join"]
offset_left = 968.0
offset_top = 352.0
offset_right = 1144.0
offset_bottom = 383.0
theme = ExtResource("2_vfopn")
text = "censor IP"

[node name="wait" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="wait"]
offset_right = 1280.0
offset_bottom = 720.0
theme = ExtResource("2_vfopn")
theme_override_font_sizes/font_size = 32
text = "please wait..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="chatShit" type="Node2D" parent="."]

[node name="layer" type="CanvasLayer" parent="chatShit"]
visible = false

[node name="chat" type="Control" parent="chatShit/layer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="messages-old" type="TextEdit" parent="chatShit/layer/chat"]
self_modulate = Color(1, 1, 1, 0.505882)
layout_mode = 0
offset_left = -612.0
offset_top = -332.0
offset_right = 652.0
offset_bottom = 236.0
theme = ExtResource("2_vfopn")
editable = false

[node name="messages" type="RichTextLabel" parent="chatShit/layer/chat"]
layout_mode = 0
offset_left = -612.0
offset_top = -332.0
offset_right = 652.0
offset_bottom = 236.0
focus_mode = 2
theme = ExtResource("2_vfopn")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="message" type="TextEdit" parent="chatShit/layer/chat"]
layout_mode = 0
offset_left = -612.0
offset_top = 244.0
offset_right = 572.0
offset_bottom = 307.0
theme = ExtResource("2_vfopn")
placeholder_text = "type yo shit here"

[node name="ping" type="Button" parent="chatShit/layer/chat"]
layout_mode = 0
offset_left = 292.0
offset_top = 340.0
offset_right = 476.0
offset_bottom = 371.0
theme = ExtResource("2_vfopn")
text = "ping server"

[node name="leave" type="Button" parent="chatShit/layer/chat"]
layout_mode = 0
offset_left = -612.0
offset_top = 340.0
offset_right = -524.0
offset_bottom = 371.0
theme = ExtResource("2_vfopn")
text = "leave"

[node name="send" type="Button" parent="chatShit/layer/chat"]
layout_mode = 0
offset_left = 580.0
offset_top = 276.0
offset_right = 652.0
offset_bottom = 307.0
theme = ExtResource("2_vfopn")
text = "send"

[node name="info2" type="Label" parent="chatShit/layer/chat"]
visible = false
layout_mode = 0
offset_left = -612.0
offset_top = 356.0
offset_right = -121.0
offset_bottom = 379.0
theme = ExtResource("2_vfopn")
text = "press ` or F7 to open host settings"

[node name="info" type="Label" parent="chatShit/layer/chat"]
layout_mode = 0
offset_left = -612.0
offset_top = 316.0
offset_right = 380.0
offset_bottom = 332.0
theme = ExtResource("2_vfopn")
text = "username: john roblox | connected to: localhost | ping: 2137ms"

[node name="usernameColor" type="OptionButton" parent="chatShit/layer/chat"]
layout_mode = 0
offset_left = 484.0
offset_top = -308.0
offset_right = 652.0
offset_bottom = -277.0
theme = ExtResource("2_vfopn")
selected = 0
item_count = 18
popup/item_0/text = "white"
popup/item_1/text = "red"
popup/item_1/id = 1
popup/item_2/text = "green"
popup/item_2/id = 2
popup/item_3/text = "blue"
popup/item_3/id = 3
popup/item_4/text = "cyan"
popup/item_4/id = 4
popup/item_5/text = "purple"
popup/item_5/id = 5
popup/item_6/text = "black"
popup/item_6/id = 6
popup/item_7/text = "gold"
popup/item_7/id = 7
popup/item_8/text = "pink"
popup/item_8/id = 8
popup/item_9/text = "yellow"
popup/item_9/id = 9
popup/item_10/text = "gray"
popup/item_10/id = 10
popup/item_11/text = "crimson"
popup/item_11/id = 11
popup/item_12/text = "aqua"
popup/item_12/id = 12
popup/item_13/text = "teal"
popup/item_13/id = 13
popup/item_14/text = "azure"
popup/item_14/id = 14
popup/item_15/text = "orange"
popup/item_15/id = 15
popup/item_16/text = "rainbow"
popup/item_16/id = 16
popup/item_17/text = "piss yellow"
popup/item_17/id = 17

[node name="Label" type="Label" parent="chatShit/layer/chat/usernameColor"]
layout_mode = 0
offset_top = -24.0
offset_right = 92.0
offset_bottom = -1.0
theme = ExtResource("2_vfopn")
text = "name color:"

[node name="clear" type="Button" parent="chatShit/layer/chat"]
layout_mode = 0
offset_left = 484.0
offset_top = 340.0
offset_right = 652.0
offset_bottom = 371.0
theme = ExtResource("2_vfopn")
text = "clear chat"

[node name="MarginContainer" type="MarginContainer" parent="chatShit/layer/chat"]
layout_mode = 0
offset_left = -556.0
offset_top = -304.0
offset_right = -516.0
offset_bottom = -264.0
theme = ExtResource("2_vfopn")

[node name="hostSettings" type="Control" parent="chatShit/layer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="chatShit/layer/hostSettings"]
layout_mode = 0
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 359.0
theme = ExtResource("2_vfopn")
color = Color(0.230315, 0.230315, 0.230315, 0.72549)

[node name="Label2" type="RichTextLabel" parent="chatShit/layer/hostSettings"]
layout_mode = 0
offset_left = -624.0
offset_top = -296.0
offset_bottom = 152.0
theme = ExtResource("2_vfopn")
text = "connected users: "

[node name="Label" type="Label" parent="chatShit/layer/hostSettings"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = -296.0
grow_horizontal = 2
theme = ExtResource("2_vfopn")
theme_override_font_sizes/font_size = 64
text = "host settings"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="chatShit/layer/hostSettings"]
layout_mode = 0
offset_left = -576.0
offset_top = 216.0
offset_right = -192.0
offset_bottom = 247.0
theme = ExtResource("2_vfopn")
placeholder_text = "enter username here..."

[node name="ban" type="Button" parent="chatShit/layer/hostSettings/LineEdit"]
visible = false
layout_mode = 0
offset_left = 256.0
offset_top = 31.0
offset_right = 376.0
offset_bottom = 62.0
theme = ExtResource("2_vfopn")
text = "ban username"

[node name="kick" type="Button" parent="chatShit/layer/hostSettings/LineEdit"]
layout_mode = 0
offset_left = 192.0
offset_top = 31.0
offset_right = 231.0
offset_bottom = 62.0
theme = ExtResource("2_vfopn")
text = "kick"

[node name="Label" type="Label" parent="chatShit/layer/hostSettings/LineEdit"]
layout_mode = 0
offset_top = -32.0
offset_right = 384.0
offset_bottom = -9.0

[connection signal="pressed" from="host-join/host2" to="." method="_on_host_2_pressed"]
[connection signal="pressed" from="host-join/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="host-join/join2" to="." method="_on_join_2_pressed"]
[connection signal="pressed" from="host-join/fav" to="." method="_on_fav_pressed"]
[connection signal="pressed" from="host-join/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="chatShit/layer/chat/ping" to="." method="_on_ping_pressed"]
[connection signal="pressed" from="chatShit/layer/chat/leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="chatShit/layer/chat/send" to="." method="_on_send_pressed"]
[connection signal="item_selected" from="chatShit/layer/chat/usernameColor" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="chatShit/layer/chat/clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="chatShit/layer/hostSettings/LineEdit/kick" to="." method="_on_kick_pressed"]
